# vim-project-config

./: .editorconfig  README.md  filetype.vim  pyproject.toml  run_checks.sh
TODO/: PC001.txt  PC002.txt  PC003.txt  PC004.txt  PC005.txt  PC006.txt  PC007.txt  PC008.txt  PC009.txt  PC010.txt  PC011.txt  PC012.txt  PC013.txt  PC014.txt  PC015.txt  PC016.txt  PC017.txt  PC018.txt  PC019.txt  PC020.txt  PC021.txt  PC022.txt  PC023.txt  PC024.txt  PC025.txt  PC026.txt  PC027.txt  PC028.txt  PC029.txt  PC030.txt  PC031.txt  PC032.txt  PC033.txt  PC034.txt  PC035.txt  PC036.txt  PC037.txt  PC038.txt  PC039.txt  PC040.txt  (+3 more)
autoload/: vimprojectconfig.vim
autoload/vimprojectconfig/: _cache.vim  _configs.vim  _engine.vim  _settings.vim  _ui.vim  _utils.vim
docs/: examples.md  filetype-detection.md
examples/: skeleton.vim
plugin/: vimprojectconfig.vim
tests/: conftest.py  editor.py  projects.py  test_framework.py  test_utils.py  vimrc.vim
tests/e2e/: test_creating_new_projects.py  test_editing_existing_projects.py  test_hot_reload.py  test_use_case_set_custom_filetype.py
