[tool.poetry]
name = "vim-project-config-tests"
version = "1.0"
description = "Test suite for the vim-project-config plugin"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
#strict = true
